<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text" />
    <string name="title_txt">Trivia</string>
    <string name="out_of_text">Question 45/100</string>
    <string name="trueBtn">TRUE</string>
    <string name="falseBtn">FALSE</string>
    <string name="nxtBtn">NEXT</string>
    <string name="Question_text">this is the actual text</string>
    <string name="correct_answer">Correct!</string>
    <string name="Wrong_answer">Incorrect!</string>
</resources>