<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#11345E"
        android:hapticFeedbackEnabled="false"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text"
            style="@style/Main_text"
            android:text="@string/title_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/outOfText"
            style="@style/Main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/out_of_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="153dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="#14C5DC"
            android:hapticFeedbackEnabled="false"
            app:cardBackgroundColor="#5B67A8"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outOfText">

            <TextView
                android:id="@+id/questionText"
                style="@style/Main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Question_text"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonTure"
            style="@style/btnStyle"
            android:layout_width="398dp"
            android:text="@string/trueBtn"
            app:backgroundTint="#3F51B5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.069" />

        <Button
            android:id="@+id/buttonFalse"
            style="@style/btnStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="3dp"
            android:text="@string/falseBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTure" />

        <Button
            android:id="@+id/buttonNext"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="36dp"
            android:text="@string/nxtBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.892"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFalse" />

        <TextView
            android:id="@+id/highScroe"
            style="@style/ScoreStyle"
            android:text="score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.409"
            app:layout_constraintStart_toEndOf="@+id/outOfText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/HighScroeTime"
            style="@style/ScoreStyle"
            android:layout_width="132dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintStart_toEndOf="@+id/title_text"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>